--- a/gol.css
+++ b/gol.css
@@ -15,6 +15,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 .petritable {
+    height: 50%;
     border: 1px solid #cceeff;
     border-collapse: collapse;
     margin: auto;
